# cozo

./: .gitignore  .gitmodules  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  IN_PROG.md  PLAN.md  README-zh.md  README.md  TODO.md  TUNING_ROCKSDB.md  WINDOWS.md  archive.sh  build-release-linux.sh  build-release-mac.sh  build-release-windows.ps1  build_rocksdb.sh  release_process.md
c/: Cargo.toml  cozo_c.h
c/src/: lib.rs
cozo-bin/: Cargo.toml  README-zh.md  README.md
cozo-bin/src/: client.rs  index.html  main.rs  repl.rs  security.txt  server.rs
cozo-core/: Cargo.toml  README-zh.md  README.md
cozo-core/benches/: pokec.rs  time_travel.rs  wiki_pagerank.rs
cozo-core/src/: cozoscript.pest  lib.rs  utils.rs
cozo-core/src/algo/: all_pairs_shortest_path.rs  astar.rs  bfs.rs  constant.rs  csv.rs  degree_centrality.rs  dfs.rs  jlines.rs  kruskal.rs  label_propagation.rs  louvain.rs  mod.rs  pagerank.rs  prim.rs  random_walk.rs  reorder_sort.rs  shortest_path_dijkstra.rs  strongly_connected_components.rs  top_sort.rs  triangles.rs  yen.rs
cozo-core/src/data/: aggr.rs  expr.rs  functions.rs  json.rs  memcmp.rs  mod.rs  program.rs  relation.rs  symb.rs  tuple.rs  value.rs
cozo-core/src/data/tests/: aggrs.rs  exprs.rs  functions.rs  json.rs  memcmp.rs  mod.rs  validity.rs  values.rs
cozo-core/src/fixed_rule/: mod.rs
cozo-core/src/fixed_rule/algos/: all_pairs_shortest_path.rs  astar.rs  bfs.rs  degree_centrality.rs  dfs.rs  kruskal.rs  label_propagation.rs  louvain.rs  mod.rs  pagerank.rs  prim.rs  random_walk.rs  shortest_path_bfs.rs  shortest_path_dijkstra.rs  strongly_connected_components.rs  top_sort.rs  triangles.rs  yen.rs
cozo-core/src/fixed_rule/utilities/: constant.rs  csv.rs  jlines.rs  mod.rs  random_walk.rs  reorder_sort.rs
cozo-core/src/fts/: README.md  ast.rs  indexing.rs  mod.rs
cozo-core/src/fts/cangjie/: mod.rs  options.rs  stream.rs  tokenizer.rs
cozo-core/src/fts/tokenizer/: alphanum_only.rs  ascii_folding_filter.rs  empty_tokenizer.rs  lower_caser.rs  mod.rs  ngram_tokenizer.rs  raw_tokenizer.rs  remove_long.rs  simple_tokenizer.rs  split_compound_words.rs  stemmer.rs  tokenized_string.rs  tokenizer.rs  tokenizer_impl.rs  (+2 more)
cozo-core/src/parse/: expr.rs  fts.rs  imperative.rs  mod.rs  query.rs  schema.rs  sys.rs
cozo-core/src/query/: compile.rs  eval.rs  graph.rs  logical.rs  magic.rs  mod.rs  ra.rs  relation.rs  reorder.rs  sort.rs  stored.rs  stratify.rs
cozo-core/src/runtime/: callback.rs  db.rs  hnsw.rs  imperative.rs  in_mem.rs  minhash_lsh.rs  mod.rs  relation.rs  temp_store.rs  tests.rs  transact.rs
cozo-core/src/storage/: mem.rs  mod.rs  newrocks.rs  re.rs  rocks.rs  sled.rs  sqlite.rs  temp.rs  tikv.rs
cozo-core/tests/: air-routes-latest-edges.csv  air-routes-latest-nodes.csv  air-routes.json  air_routes.rs  air_routes_mem.rs  air_routes_rocksdb.rs  air_routes_sled.rs  air_routes_sqlite.rs  air_routes_tikv.rs
cozo-lib-c/: Cargo.toml  README-zh.md  README.md  build.rs  cbindgen.toml  comiple-ios.sh  cozo_c.h  example.c
cozo-lib-c/src/: lib.rs
cozo-lib-java/: Cargo.toml  CozoJavaBridge.java  README-zh.md  README.md  build.sh  org_cozodb_CozoJavaBridge.h
cozo-lib-java/src/: lib.rs
cozo-lib-nodejs/: .gitignore  Cargo.toml  README-zh.md  README.md  build_linux.sh  build_mac.sh  build_win.ps1  example.js  index.d.ts  index.js  package.json  test_build.sh
cozo-lib-nodejs/src/: lib.rs
cozo-lib-python/: .gitignore  Cargo.toml  README-zh.md  README.md  build.sh  pyproject.toml
cozo-lib-python/src/: lib.rs
cozo-lib-swift/: .gitignore  Cargo.toml  CozoDB.swift  CozoSwiftBridge.podspec  Package.swift  README-zh.md  README.md  build-rust.sh  build.rs  publish_pod.sh
cozo-lib-swift/src/: lib.rs
cozo-lib-wasm/: Cargo.toml  Makefile  README-zh.md  README.md  build.sh  post_build.js
cozo-lib-wasm/cozo-wasm-app/: craco.config.js  package-lock.json  package.json  tsconfig.json
cozo-lib-wasm/cozo-wasm-app/src/: App.css  App.tsx  index.tsx
cozo-lib-wasm/cozo-web/: package.json
cozo-lib-wasm/cozo-web/public/: manifest.json
cozo-lib-wasm/cozo-web/src/: App.css  App.js  setup.js
cozo-lib-wasm/cozo_web_wasm/: bootstrap.js  index.html  index.js  package.json  webpack.config.js
cozo-lib-wasm/cozo_web_wasm/.bin/: create-wasm-app.js
cozo-lib-wasm/src/: lib.rs  utils.rs
cozo-lib-wasm/src/js/: indexeddb.js
cozo-lib-wasm/tests/: web.rs
cozo-lib-wasm/wasm-react-demo/: README-zh.md  README.md  deploy.sh  package.json
cozo-lib-wasm/wasm-react-demo/public/: index.html
cozo-lib-wasm/wasm-react-demo/src/: App.css  App.js  App.test.js  index.css  index.js  reportWebVitals.js  setupTests.js
cozohttp/: Cargo.toml  build.rs
cozohttp/src/: main.rs
cozopy/: .gitignore  Cargo.toml  air-routes-latest-edges.csv  air-routes-latest-nodes.csv  air_routes.py  cozo.py  smoke.py  test.py
cozopy/cozo/: __init__.py  test.py
cozopy/src/: lib.rs
cozorocks/: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.txt  README-zh.md  README.md  build.rs  build_deps.sh  build_rocksdb.sh  build_version.cc  rocksdb_lib_sources.txt
cozorocks/bridge/: bridge.h  common.h  cozorocks.cc  cozorocks.h  db.cpp  db.h  iter.h  opts.h  slice.h  status.cpp  status.h  tx.cpp  tx.h
cozorocks/src/: bridge.h  bridge.rs  lib.rs  options.rs  status.rs  tests.rs
cozorocks/src/bridge/: db.rs  iter.rs  mod.rs  tx.rs
cozoserver/: Cargo.toml  README-zh.md  README.md  jsclient.html  jsclient.js
cozoserver/src/: main.rs  repl.rs
java/: .gitignore  Cargo.toml
java/org/cozodb/: CozoDb.java
jupyter/cozoscript-kernel/: .gitignore  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
jupyter/cozoscript-kernel/binder/: environment.yml  postBuild
jupyter/cozoscript-kernel/cozoscript_kernel/: __init__.py  handlers.py
jupyter/cozoscript-kernel/src/: index.ts  kernel.ts
nodejs/: Cargo.toml  README.md  package-lock.json  package.json
nodejs/src/: lib.rs
python/: Cargo.toml  cozo_helper.py  pyproject.toml
python/src/: lib.rs
(+317 files in other folders)
