[package]
name = "cozo"
version = "0.1.0"
edition = "2021"
description = "A database in development"
authors = ["Ziyang Hu"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casey = "0.3.3"
tempfile = "3.3.0"
either = "1.7.0"
rand = "0.8.5"
miette = { version = "5.3.0", features = ["fancy"] }
lazy_static = "1.4.0"
log = "0.4.16"
env_logger = "0.9.0"
smallvec = { version = "1.8.1", features = ["serde", "write", "union", "const_generics", "const_new"] }
smartstring = { version = "1.0.1", features = ["serde"] }
serde_json = "1.0.81"
serde = { version = "1.0.137" }
serde_derive = "1.0.137"
serde_bytes = "0.11.7"
rmp = "0.8.11"
rmp-serde = "1.1.0"
rmpv = "1.0.0"
base64 = "0.13.0"
chrono = "0.4.19"
priority-queue = "1.2.3"
ordered-float = "3.0.0"
num-traits = "0.2.15"
itertools = "0.10.3"
regex = "1.6.0"
pest = "2.2.1"
pest_derive = "2.2.1"
rayon = "1.5.3"
nalgebra = "0.31.1"
reqwest = { version = "0.11.11", features = ["blocking"] }
approx = "0.5.1"
unicode-normalization = "0.1.21"
thiserror = "1.0.34"
uuid = { version = "1.1.2", features = ["v1", "v4", "serde"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "mysql", "mssql", "sqlite"] }
cozorocks = { path = "cozorocks" }

#[target.'cfg(not(target_env = "msvc"))'.dependencies]
#tikv-jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

#[profile.release]
#lto = true

#[profile.release]
#debug = true

[workspace]
members = ["cozorocks", "cozoserver"]