[package]
name = "cozo"
version = "0.1.2"
edition = "2021"
description = "A general-purpose, transactional, relational database that uses Datalog and focuses on graph data and algorithms"
authors = ["Ziyang Hu"]
license = "AGPL-3.0-or-later"
homepage = "https://github.com/cozodb/cozo"
repository = "https://github.com/cozodb/cozo"
documentation = "https://cozodb.github.io/current/manual"
exclude = [
    "docs/*",
    "tests/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
jemalloc = ["tikv-jemallocator-global", "cozorocks/jemalloc"]
io-uring = ["cozorocks/io-uring"]

[dependencies]
casey = "0.3.3"
either = "1.7.0"
rand = "0.8.5"
miette = { version = "=5.3.0", features = ["fancy"] }
lazy_static = "1.4.0"
log = "0.4.16"
env_logger = "0.9.0"
smallvec = { version = "1.8.1", features = ["serde", "write", "union", "const_generics", "const_new"] }
smartstring = { version = "1.0.1", features = ["serde"] }
serde_json = "1.0.81"
serde = { version = "1.0.137" }
serde_derive = "1.0.137"
serde_bytes = "0.11.7"
rmp = "0.8.11"
rmp-serde = "1.1.0"
rmpv = "1.0.0"
base64 = "0.13.0"
chrono = "0.4.19"
chrono-tz = "0.6.3"
priority-queue = "1.2.3"
ordered-float = "3.0.0"
byteorder = "1.4.3"
num-traits = "0.2.15"
itertools = "0.10.3"
regex = "1.6.0"
pest = "2.2.1"
pest_derive = "2.2.1"
rayon = "1.5.3"
nalgebra = "0.31.1"
minreq = { version = "2.6.0", features = ["https-rustls"] }
approx = "0.5.1"
unicode-normalization = "0.1.21"
thiserror = "1.0.34"
uuid = { version = "1.1.2", features = ["v1", "v4", "serde"] }
csv = "1.1.6"
tikv-jemallocator-global = { version = "0.5.0", optional = true }
cozorocks = { path = "cozorocks", version = "0.1.0" }

clap = { version = "3.2.8", features = ["derive"] }
rouille = "3.5.0"

[profile.release]
lto = true

#[profile.release]
#debug = true

[workspace]
members = ["cozorocks"]
