[workspace]
resolver = "2"
members = [
    "cozo-core",
    "cozorocks",
    "cozo-bin",
    "cozo-lib-c",
    "cozo-lib-java",
    "cozo-lib-wasm",
    "cozo-lib-swift",
    "cozo-lib-python",
    "cozo-lib-nodejs",
    "cozo-core-examples",
]

[profile.bench]
lto = true
debug = true

[profile.dev.package."cozorocks"]
opt-level = 3
