[package]
name = "cozo-bin"
version = "0.6.0"
edition = "2021"
license = "MPL-2.0"
description = "Standalone Cozo database"
authors = ["Ziyang Hu"]
homepage = "https://www.cozodb.org"
repository = "https://github.com/cozodb/cozo"
documentation = "https://docs.cozodb.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#! # Features

## Enables the `minimal`, `requests` and `graph-algo` features
compact = ["minimal", "requests", "graph-algo"]
## Enables the `storage-sqlite` and `graph-algo` features
mobile = ["storage-sqlite", "graph-algo"]
## Enables the `minimal`, `requests` and `graph-algo` features in single threaded mode
compact-single-threaded = ["minimal", "requests", "graph-algo"]
## Enables the `storage-sqlite` feature
minimal = ["storage-sqlite"]
## Enables the [Sqlite](https://www.sqlite.org/index.html) backend, also allows backup and restore with Sqlite data files.
storage-sqlite = ["cozo/storage-sqlite"]
## Enables the [RocksDB](http://rocksdb.org/) backend
storage-rocksdb = ["cozo/storage-rocksdb"]
## Enables the graph algorithms
graph-algo = ["cozo/graph-algo"]
## Allows the utilities to make web requests to fetch data
requests = ["cozo/requests"]
## Uses jemalloc as the global allocator, can make a difference in performance
jemalloc = ["cozo/jemalloc"]
## Enables io-uring option for the RocksDB storage
io-uring = ["cozo/io-uring"]
## Enables the [Sled](https://github.com/spacejam/sled) backend
storage-sled = ["cozo/storage-sled"]
## Enables the [TiKV](https://tikv.org/) client backend
storage-tikv = ["cozo/storage-tikv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cozo = { version = "0.6.0", path = "../cozo-core", default-features = false }
clap = { version = "4.0.26", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
serde_derive = "1.0.137"
serde = { version = "1.0.137" }
chrono = "0.4.19"
serde_json = "1.0.81"
prettytable = "0.10.0"
rustyline = "10.0.0"
minreq = { version = "2.6.0", features = ["https-rustls"] }
miette = { version = "5.5.0", features = ["fancy"] }
ctrlc = "3.2.4"
axum = "0.6.2"
axum-macros = "0.3.1"
itertools = "0.10.5"
tokio = { version = "1.24.1", features = ["full"] }
async-stream = "0.3.3"
futures = "0.3.25"
crossbeam = "0.8.2"
eventsource-client = "0.11.0"
tower-http = { version = "0.3.5", features = ["full"] }