[package]
name = "cozo_c"
version = "0.1.3"
edition = "2021"
license = "MPL-2.0"
homepage = "https://github.com/cozodb/cozo"
repository = "https://github.com/cozodb/cozo"
documentation = "https://cozodb.github.io/current/manual"
description = "C bindings for CozoDB"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
jemalloc = ["cozo/jemalloc"]
io-uring = ["cozo/io-uring"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cozo = { version = "0.1.2", path = "../cozo-core" }
lazy_static = "1.4.0"

[build-dependencies]
cbindgen = "0.24.3"
