[package]
name = "cozo_java"
version = "0.1.3"
edition = "2021"
license = "MPL-2.0"
homepage = "https://github.com/cozodb/cozo"
repository = "https://github.com/cozodb/cozo"
documentation = "https://cozodb.github.io/current/manual"
description = "Java bindings for CozoDB"

[lib]
crate-type = ["cdylib"]

[features]
storage-rocksdb = ["cozo/storage-rocksdb"]
jemalloc = ["cozo/jemalloc"]
io-uring = ["cozo/io-uring"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robusta_jni = "0.2.0"
# , features = ["compact"]
cozo = { version = "0.1.3", path = "../cozo-core", default_features = false }
lazy_static = "1.4.0"
