[package]
name = "cozo-swift"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
storage-rocksdb = ["cozo/storage-rocksdb"]
jemalloc = ["cozo/jemalloc"]
io-uring = ["cozo/io-uring"]

[build-dependencies]
swift-bridge-build = "0.1.41"

[dependencies]
swift-bridge = "0.1.41"
cozo = { version = "0.1.7", path = "../cozo-core", default-features = false, features = ["compact"] }
