[package]
name = "cozo-swift"
version = "0.2.0"
edition = "2021"
description = "Cozo database for Swift"
authors = ["Ziyang Hu"]
license = "MPL-2.0"
homepage = "https://github.com/cozodb/cozo"
repository = "https://github.com/cozodb/cozo"
documentation = "https://cozodb.github.io/current/manual"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
storage-rocksdb = ["cozo/storage-rocksdb"]
jemalloc = ["cozo/jemalloc"]
io-uring = ["cozo/io-uring"]

[build-dependencies]
swift-bridge-build = "0.1.41"

[dependencies]
cozo = { version = "0.2.0", path = "../cozo-core", default-features = false, features = ["compact"] }
swift-bridge = "0.1.41"
