[package]
name = "cozohttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-web-static-files = "4.0.0"
static-files = "0.2.3"
clap = { version = "3.2.8", features = ["derive"] }
actix-cors = "0.6.1"
log = "0.4.16"
miette = { version = "5.3.0", features = ["fancy"] }
ansi-to-html = "0.1.0"
env_logger = "0.9.0"
serde = "1.0.144"
serde_json = "1.0.81"
serde_derive = "1.0.144"
rust-argon2 = "1.0.0"
sha3 = "0.10.4"
rand = "0.8.5"
rpassword = "7.0.0"
cozo = { path = ".." }

[build-dependencies]
static-files = "0.2.3"