[package]
name = "cozopy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cozopy"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.81"
anyhow = "1.0.58"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
cozo = { path = ".." }
