[package]
name = "cozorocks"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.69"
miette = "5.3.0"
librocksdb-sys = { version = "=0.8.0", features = ["lz4", "zstd"] }
pkg-config = { version = "0.3.25", optional = true }

[features]
jemalloc = ["librocksdb-sys/jemalloc"]
io-uring = ["librocksdb-sys/io-uring", "pkg-config"]

[build-dependencies]
cxx-build = "1.0.69"