[package]
name = "cozoserver"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
log = "0.4.16"
miette = { version = "5.3.0", features = ["fancy"] }
env_logger = "0.9.0"
serde = "1.0.144"
serde_json = "1.0.81"
serde_derive = "1.0.144"
rouille = "3.5.0"
cozo = { path = ".." }

[build-dependencies]
static-files = "0.2.3"